--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.wifidirectchat">
+    package="com.example.p2pchat">
 
     <uses-permission
         android:name="android.permission.ACCESS_FINE_LOCATION"
@@ -16,7 +16,7 @@
         android:required="true" />
 
     <application
-        android:name=".App"
+        android:name="com.example.p2pchat.App"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -25,10 +25,10 @@
         android:theme="@style/AppTheme">
 
         <activity
-            android:name=".view.ChatActivity"
+            android:name="com.example.p2pchat.view.ChatActivity"
             android:label="@string/title_activity_chat"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".view.MainActivity">
+        <activity android:name="com.example.p2pchat.view.MainActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
