--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:1.1.1"
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'com.github.yukuku:ambilwarna:2.0.1'
 }
